--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -1,5 +1,6 @@
 	
 	<div class="donation">
+    <%= gravatar_for(donation.user, options = { :size => 45 }) %>
     
     <h2>
       <strong><%= donation_quantity_currency(donation) %></strong>
