--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,7 +1,7 @@
 
   <header>
     <h1>
-      <%= gravatar_for(@user, options = { :size => 72 }) %>
+      <%= gravatar_for(@user, size: 72) %>
       <%= @user.name %>
     </h1>
 
