--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
   <ul>
   <% @users.each do |user| %>
     <li>
-      <%= gravatar_for user, size: 50 %>
+      <%= gravatar_for(user, size: 50) %>
       <%= link_to user.name, user %>
       <% if current_user.admin? && !current_user?(user) %>
 	    | <%= link_to "delete", user, method: :delete,
