--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -167,23 +167,46 @@ h2 { font-size: 24px; }
 .project a { width: 120px; margin: 0 10px 10px 0; float: left; padding: 5px; height: 60px; text-align: bottom; border: 1px solid #CDD195; }
 .project a { display: block;}
 
-.donation { border-top-width: 1px; border-top-style: solid; padding-top: 10px; margin-bottom: 35px; position: relative; clear: both; }
-.donation h2 { font-size: 18px; color: #666; margin: 0 110px 0 0;}
 .donation .tags a { display: inline-block; font-size: 11px; font-weight: normal; color: #666; text-decoration: none; background: #F3E9D1; padding: 2px; margin: 0 6px 0 0;}
-.donation_comment { margin: 15px 0;}
 //#donation_do_widget { position: absolute; top: 10px; right: 0; width: 150px; text-align: right; }
 #donation_do_widget { position: absolute; top: 8px; right: 0; text-align: right; }
 #donation_do_widget .donation_number { padding: 4px 10px; font-size: 12px; display: inline-block; background: #D9DAAA; }
 #donation_do_widget .donation_do { display: inline-block; }
 #donation_do_widget .button { padding: 4px 10px; font-size: 12px; margin: 0; }
 
-
-
 .donation { 
-  small { display: block; margin-bottom: 15px; }
-  .gravatar { float: left; margin-right: 9px; width:45px; }
-  a, a:visited { color: $main-color }
-  p { width: 432px; clear: both; margin-left: 54px; font-size: 14px;}
+  border-top-width: 1px; 
+  border-top-style: solid; 
+  padding-top: 10px; 
+  margin-bottom: 35px; 
+  position: relative; 
+  clear: both;
+
+  small { 
+    display: block; 
+    margin-bottom: 15px; 
+  }
+  .gravatar { 
+    float: left; 
+    margin-right: 9px; 
+    width: 45px; 
+  }
+  a, a:visited { 
+    color: $main-color 
+  }
+  h2 { 
+    font-size: 18px; 
+    color: #666; 
+    margin: 0 110px 10px 0;
+  }
+  .donation_comment {
+    font-size: 14px; 
+    margin: 0 120px 0 54px; 
+
+    p {
+      margin-top: 0; 
+    }
+  }
   p.donation_date { color: #AFACA4; }
 }
 small { font-size: 11px; }
