--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,7 @@
 
 $main_color: #7C9200;
 $secondary_color: #565631;
+$tertiary_color: #E4D6B3;
 
 /* colors */
 body { background: #F3E9D1; }
@@ -137,7 +138,6 @@ h2 { font-size: 24px; }
 .track_don_project { width: 540px; margin-bottom: 20px; overflow: hidden;}
 .track_don_quantity { width: 90px; margin-right: 10px; }
 .track_don_quantity_B { width: 375px; margin-bottom: 20px; float: right; }
-.main_form .track_don_quantity_B input { width: 90px; margin: 0;}
 .track_don_quantity_B_option { background: #D5D7A3; margin-bottom: 4px; }
 .track_don_quantity_B_option .hint { display: inline-block; }
 .main_form .track_don_quantity_B_option_hint { display: inline-block; width: auto; font-size: 12px; vertical-align: top; padding: 6px 0 0 0;}
@@ -150,6 +150,37 @@ h2 { font-size: 24px; }
 .hint { font-size: 12px}
 #i_want_to_explain_content { display: none; }
 #i_want_to_explain_content textarea { width: 97%; height: 100px; font-size: 13px; padding-top: 10px; margin: 10px 0;}
+
+.track_don_quantity_B {
+  
+  input { 
+    width: 65px; 
+    margin: 0;
+  }
+
+  .track_don_currency_selector {
+    background: $main_color; 
+    display: inline-block;
+    vertical-align: top; 
+    margin: 0; 
+
+    select {
+      background: none; 
+      vertical-align: top; 
+      height: 38px; 
+      margin: 4px 0 0 0; 
+      border: none;
+      font-size: 18px;
+      font-family: 'Raleway';
+      color: #FFF;
+      
+      option {
+        white-space: pre;
+      }
+    }
+  }
+
+}
 
 #project { overflow: hidden; }
 #project .meta { width: 42%; float: left; padding: 2% 4%; font-size: 12px; }
