--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
  *= require jquery-ui/autocomplete
  *= require tipsy
  *= require slidebars
+ *= require select2
  *= 
  */
 
@@ -135,9 +136,10 @@ h2 { font-size: 24px; }
 
 .main_form { clear: both; margin: 0 0 20px 0;}
 .track_don_project, .track_don_quantity, .track_don_date { display: inline-block; }
-.track_don_project { width: 540px; margin-bottom: 20px; overflow: hidden;}
+.track_don_project { width: 540px; overflow: hidden;}
 .track_don_quantity { width: 90px; margin-right: 10px; }
-.track_don_quantity_B { width: 375px; margin-bottom: 20px; float: right; }
+.track_don_quantity_B { width: 375px; float: right; }
+.main_form .track_don_quantity_B input { width: 90px; margin: 0;}
 .track_don_quantity_B_option { background: #D5D7A3; margin-bottom: 4px; }
 .track_don_quantity_B_option .hint { display: inline-block; }
 .main_form .track_don_quantity_B_option_hint { display: inline-block; width: auto; font-size: 12px; vertical-align: top; padding: 6px 0 0 0;}
@@ -147,9 +149,13 @@ h2 { font-size: 24px; }
 .track_don_quantity input { width: 74px; }
 .track_don_date input { width: 100%; font-size: 12px;}
 .track_don_options { margin: 0 0 20px 0; clear: both;}
-.hint { font-size: 12px}
+.hint { font-size: 12px; margin-bottom: 20px; }
 #i_want_to_explain_content { display: none; }
 #i_want_to_explain_content textarea { width: 97%; height: 100px; font-size: 13px; padding-top: 10px; margin: 10px 0;}
+#project_attributes { display:none; 
+  input, textarea { width: 96.5%; font-size: 13px; border: 1px dashed $main-color; font-weight:bold;}
+  textarea { width:99%; padding-top: 10px; height: 100px; }
+}
 
 .track_don_quantity_B {
   
@@ -297,6 +303,14 @@ hr { height: 1px; border:0; background-color: #D9DAAA; margin: 60px 0px 15px; wi
 
 .ui-autocomplete { border: 1px solid red; }
 
+.select2-container { width: 540px; font-size: 22px; font-weight: bold; font-family: Raleway; height: 40px; margin-bottom: 8px !important; 
+  a.select2-choice { line-height: 32px; display: block; height: 35px; border: 1px dashed #7c9200; padding: 4px 6px 0px;
+    
+  }
+}
+.select2-results .select2-highlighted { background: #7c9200 !important; }
+.select2-drop-active { border: 1px dashed #7c9200 !important; border-top: none !important; }
+.select2-search input[type=text] { font-family: Raleway; font-size: 18px; }
 #first_donation_pending { padding-top: 1em; padding-bottom: 1em; margin-bottom: 2em; }
 
 #footer { text-align: center; font-size: 12px }
