--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -1,3 +1,10 @@
+<% if (temp_donations_exist) %>
+  <h2>Woooa! Congratulations</h2>
+  <p>You have tracked your first donation. Wasn't that easy? But... you wouldn't want to loose it, right? Add your email and a password and you'll have your account created. </p>
+  <p><%= cookie_donation[:project_name] %></p>
+<% else %>
+	<h1>Sign up</h1>
+<% end %>
   
   <%= form_for(@user,  html: {class: "simple_form"} ) do |f| %>
 
