Refactor project from included in donation form
Apart from that, a few refactors in the method that sets the parameters of the donation in the cookies when the user is not logged in

--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -1,4 +1,4 @@
-<% if (temp_donations_exist) %>
+<% if temp_donations_exist? %>
   <h2>Woooa! Congratulations</h2>
   <p>You have tracked your first donation. Wasn't that easy? But... you wouldn't want to loose it, right? Add your email and a password and you'll have your account created. </p>
   <p><%= cookie_donation[:project_name] %></p>
