--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -3,24 +3,26 @@
   <div class="main_form">
 
     <div class="track_don_project">
-      <% if controller_name == 'projects' %>
+      <% if @project %>
         <div class="track_don_project_name">
           <%= @project.name %>
         </div>
         <div class="hint">
-          <%= link_to t('need_to_trackdon_for_another_project'), "#{root_path}#track_donation" %>
+          <%= link_to t('need_to_trackdon_for_another_project'), root_path(anchor: 'track_donation') %>
         </div>
+        <%= f.hidden_field :project_id, value: @project.id %>
       <% else %>
-        <%= f.hidden_field :project_name %>
-        <div class="hint"><%= f.label(:project_name, 'ie. Wikipedia, Redd Cross, UNR') %></div>
-        <div id="project_attributes">
-          <%= f.text_area :project_description %>
-          <div class="hint"><%= f.label(:project_description, 'Project Description') %></div>
-          <%= f.text_field :project_url %>
-          <div class="hint"><%= f.label(:project_url, 'Project URL') %></div>
-        </div>        
+        <%= f.fields_for(:project) do |project_form| %>
+          <%= project_form.hidden_field :name %>
+          <div class="hint"><%= project_form.label(:name, 'ie. Wikipedia, Redd Cross, UNR') %></div>
+          <div id="project_attributes">
+            <%= project_form.text_area :description %>
+            <div class="hint"><%= project_form.label(:description, 'Project Description') %></div>
+            <%= project_form.text_field :url %>
+            <div class="hint"><%= project_form.label(:url, 'Project URL') %></div>
+          </div>
+        <% end %>
       <% end %>
-        
     </div>
 
     <div class="track_don_quantity" style="display: none">
@@ -63,9 +65,6 @@
 
   </div>
 
-  <% if params[:controller] == 'projects' %> 
-    <%= f.hidden_field :project_id, :value => @project.id %>
-  <% end %>
   <%= f.submit('TrackDon', class: 'big' ) %>
 
 <% end %>
