--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -7,7 +7,7 @@
     <% if @project.errors.any? %>
       <div id="error_explanation">
         <h2><%= pluralize(@project.errors.count, "error") %> prohibited
-          this article from being saved:</h2>
+          this project from being saved:</h2>
         <ul>
           <% @project.errors.full_messages.each do |msg| %>
             <li><%= msg %></li>
