--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,7 +1,7 @@
 <section id="project" class="content_column">
 
   <div class="project_main">
-  
+
     <section class="meta">
       <h1><%= @project.name %></h1>
       <div class="links">
@@ -22,9 +22,9 @@
 
       <div class="facts">
         <ul>
-          <li><%= @project.donations.where('date >= ?', 1.month.ago).count %> donations in the last week</li>
-          <li><%= @project.users.distinct.count %> people have donated in total</li>
-          <li><%= @project.donations.count %> donations in total</li>
+          <li><%= t('.donations_last_week', count: @project.last_month_donations) %></li>
+          <li><%= t('.people_donated', count: @project.total_people_donated) %></li>
+          <li><%= t('.donations_in_total', count: @project.total_donations) %></li>
           <!-- <li>People who donate to Wikipedia repeat 1,3 times, in an average of 8,4 months</li> -->
         </ul>
       </div>
@@ -32,25 +32,25 @@
 
     <section class="actions">
       <div>
-        <p><%= t('projects.have_you_donated') %></p>
+        <p><%= t('.have_you_donated') %></p>
         <a href="#track_donation" class="button">TrackDon</a>
       </div>
       <div>
-        <p><%= t('projects.do_you_want_to_actually_donate') %></p>
+        <p><%= t('.do_you_want_to_actually_donate') %></p>
         <a href="<%= @project.donation_url %>" class="button"><%= t('projects.donate_in_project_site') %></a>
       </div>
       <div>
-        <p><%= t 'invite_your_friends_to_this_page' %></p>
+        <p><%= t('.invite_your_friends_to_this_page') %></p>
         <a target="_blank" href="mailto:?to=&subject=Has hecho alguna donación?&body=Mira este site para llevar un registro de las donaciones que haces, y así motivar a los demás a que también donen. Por ejemplo, mira mi donación a <%= @project.name %> ToDo: URL_SITE/PROJECT" class="button"><%= t 'invite' %></a>
       </div>
       <!-- <div class="similar_projects">
         <p>Similar projects</p>
         <ul>
-          <li><a href="#">WadusWiki</a></li>
-          <li><a href="#">WikiWadus</a></li>
-          <li><a href="#">TheDefinitiveWiki</a></li>
+        <li><a href="#">WadusWiki</a></li>
+        <li><a href="#">WikiWadus</a></li>
+        <li><a href="#">TheDefinitiveWiki</a></li>
         </ul>
-      </div> -->
+        </div> -->
     </section>
 
   </div>
