--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,18 +34,9 @@
 			</section>
 			<section id="nav_personal">
 				<ul>
-					<% if logged_in? %>
-						<li>Hello <%= link_to current_user.name, current_user %></li>
-						<li>Track Donation</li>
-						<li><%= link_to "Log out", logout_path, method: "delete" %></li>
-					<% else %>
-					  	<li><%= link_to "Track your first donation", signup_path %></li>
-					  	<li><%= link_to "Login", login_path %></li>
-					<% end %>
-					
-				</ul>
+          <%= render 'shared/user_links' %>
+        </ul>
 			</section>
-
       
 		</section>
 
@@ -87,14 +78,7 @@
 	</ul>
 
 	<ul class="bottom">
-		<% if logged_in? %>
-			<li><%= link_to 'Hello ' + current_user.name, current_user %></li>
-			<li><%= link_to t('track_donation'), track_donation_link %></li>
-			<li><%= link_to "Log out", logout_path, method: "delete" %></li>
-		<% else %>
-		  	<li><%= link_to "Track your first donation", signup_path %></li>
-		  	<li><%= link_to "Login", login_path %></li>
-		<% end %>
+    <%= render 'shared/user_links' %>
 	</ul>
 </div>
 
