--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
 				<ul>
 					<% if logged_in? %>
 						<li>Hello <%= link_to current_user.name, current_user %></li>
-						<li>Track Donation</li>
+						<li><%= link_to t('users.invite'), invite_path %></li>
 						<li><%= link_to "Log out", logout_path, method: "delete" %></li>
 					<% else %>
 					  	<li><%= link_to "Track your first donation", signup_path %></li>
