--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -244,6 +244,10 @@ h2 { font-size: 24px; }
       margin-top: 0; 
     }
   }
+  .donation_tools {
+    font-size: 11px;
+    margin: 10px 0 10px 0;
+  }
   p.donation_date { color: #AFACA4; }
 }
 small { font-size: 11px; }
