--- a/app/views/donations/_donation_do_widget.html.erb
+++ b/app/views/donations/_donation_do_widget.html.erb
@@ -6,6 +6,6 @@
   <% end %>
 
   <div class="donation_do">
-    <%= link_to 'TrackDon', projects_url, class: 'button', title: t('donations.donation_do_widget.link_title') %>
+    <%= link_to 'TrackDon', projects_path, class: 'button', title: t('donations.donation_do_widget.link_title') %>
   </div>
 </div>
