--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
     <li>
       <%= gravatar_for(user, size: 50) %>
       <%= link_to user.name, user %>
-      <% if current_user.admin? && !current_user?(user) %>
+      <% if logged_in? && current_user.admin? && !current_user?(user) %>
 	    | <%= link_to "delete", user, method: :delete,
 	                                  data: { confirm: "You sure?" } %>
 	  <% end %>
