--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -1,4 +1,4 @@
-<div class="donation">
+<div class="donation" id="donation-<%= donation.id %>">
   <%= gravatar_for(donation.user, size: 45) %>
 
   <h2>
@@ -23,7 +23,7 @@
 
   <% if logged_in? && current_user?(donation.user) %>
     <div class="donation_tools">
-      <%= link_to(t('.edit'), edit_donation_path(donation), title: t('.edit_title')) %> ·
+      <%= link_to(t('.edit'), edit_donation_path(donation), title: t('.edit_title'), remote: true) %> ·
       <%= link_to(t('.delete'), donation, method: :delete, title: t('.delete_title'), data: {confirm: t('.sure')}) %>
     </div>
   <% end %>
@@ -33,5 +33,4 @@
       <%= markdown(donation.comment) %>
     </div>
   <% end %>
-
 </div>
