--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,14 +7,12 @@
       <div id="edit_your_profile"><%= link_to t('.edit_your_profile'), edit_user_path(current_user) %></div>
     <% end %>
 
-    <a href="">Donations (<%= @user.donations.length %>)</a>
-    <a href="">Projects (<%= @user.projects.distinct.length %>)</a>
+    <a href="">Donations (<%= @user.donations.size %>)</a>
+    <a href="">Projects (<%= @user.projects.distinct.count %>)</a>
   </div>
 
   <div id="user_donations">
-    <% if @user.donations.any? %>
-      <%= render @user.donations %>
-    <% end %>
+    <%= render @user.donations %>
   </div>
 
   <div id="user_projects" style="display: none">
