--- a/app/views/shared/_user_links.html.erb
+++ b/app/views/shared/_user_links.html.erb
@@ -4,6 +4,6 @@
   <li><%= link_to t('users.invite'), invite_path %></li>
   <li><%= link_to t('.log_out'), logout_path, method: "delete" %></li>
 <% else %>
-  <li><%= link_to t('.track_your_first_donation'), signup_path %></li>
+  <li><%# link_to t('.track_your_first_donation'), signup_path %></li>
   <li><%= link_to t('.login'), login_path %></li>
 <% end %>
