--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -236,7 +236,7 @@ h2 { font-size: 24px; }
     color: #666; 
     margin: 0 110px 10px 0;
   }
-  .donation_comment {
+  .donation_comment, .donation_tools {
     font-size: 14px; 
     margin: 0 120px 0 54px; 
 
@@ -246,7 +246,6 @@ h2 { font-size: 24px; }
   }
   .donation_tools {
     font-size: 11px;
-    margin: 10px 0 10px 0;
   }
   p.donation_date { color: #AFACA4; }
 }
