Validate invitation tokens and fix invitation URLs

--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -46,9 +46,7 @@
       <%= country_code_select(:user, :country) %>
     </p>
 
-    <% if params[:invitation_token] %>
-      <%= f.hidden_field :invitation_token, :value => params[:invitation_token] %>
-    <% end %>
+    <%= f.hidden_field :invitation_token, value: params[:invitation_token] %>
 
     <p>
       <%= f.submit "Create my account"  %>
