--- a/app/views/pages/_about.en.html.erb
+++ b/app/views/pages/_about.en.html.erb
@@ -1,7 +1,8 @@
+<% set_meta_tags :description => t('metas.about.description') %>
 
 <section class="content_column long_text">
 
-	<h1>About TrackDons</h1>
+  <h1><%= title t('metas.about.title') %></h1>
 
 	<h2>What and why</h2>
 
