--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,5 @@
-		
+<% set_meta_tags :description => t('metas.home.description') %>
+
 		<section id="home" class="content_column">
 
 			<h1 class="logo">TrackDons</h1>
