--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<% set_meta_tags :description => t("metas.users.user.description", :user => @user.name) %>
+<% set_meta_tags :title => t("metas.users.user.title", :user => @user.name) %>
+
 <section id="user" class="user_page content_column">
 
   <%= render 'header' %>
