--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,6 +1,8 @@
+<% set_meta_tags :description => t('metas.donations.home.description') %>
+
 <section class="content_column">
 
-  <h1><%= t 'last_donations' %></h1>
+  <h1><%= title t('metas.donations.home.title') %></h1>
 
   <%= render @donations %>
 
