--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,9 @@
+<% set_meta_tags :description => t('metas.projects.home.description') %>
+<% set_meta_tags :keywords => t('metas.projects.home.keywords') %>
 
 <section class="content_column">
 
-  <h1><%= t 'projects.all_projects' %> (<%= link_to '+', new_project_path %>)</h1>
+  <h1><%= title t('metas.projects.home.all_projects') %> (<%= link_to '+', new_project_path %>)</h1>
 
   <% @projects.each do |project| %>
     <%= render project %>
