Add invitee user profile; add some texts

--- a/app/views/user_mailer/accepted_invitation.text.erb
+++ b/app/views/user_mailer/accepted_invitation.text.erb
@@ -1,1 +1,1 @@
-<%= t('.accepted_invitation_mail', :name => @name) %>
+<%= t('.accepted_invitation_mail', :name => @name, :friend_page => @friend_page) %>
