--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -47,7 +47,7 @@
 
         <div class="track_don_quantity_B_option_hint">
           <%= f.check_box :quantity_privacy %>
-          <%= f.label(:quantity_privacy, t('donations.keep_the_quantity_private'), title: t('.quantity_privacy_hint'), class: 'tipsit') %>
+          <%= f.label(:quantity_privacy, t('donations.show.keep_the_quantity_private'), title: t('.quantity_privacy_hint'), class: 'tipsit') %>
         </div>
       </div>
       <div class="hint"><%= f.label(:quantity, t('how_much_question')) %></div>
