--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,7 +9,7 @@
 				<li><%= t 'main_bullet_2' %></li>
 				<li><%= t 'main_bullet_3' %></li>
 			</ul>
-      <%= link_to t('read_more_about_this_project'), {controller: 'pages', action: 'about'}, class: 'button' %>
+      <%= link_to t('home.read_more_about_this_project'), {controller: 'pages', action: 'about'}, class: 'button' %>
 		</section>
 
 		<section id="track_donation" class="content_full">
