Completing about page

--- a/app/views/pages/_about.en.html.erb
+++ b/app/views/pages/_about.en.html.erb
@@ -30,7 +30,7 @@
   <p>Currently not. Hey we could even ask for donations! But actually this is only a learning excercise in computer programming, and a kind of experiment to see if this idea even makes any sense.</p>
 
   <h3>Who is behind TrackDons?</h3>
-  <p>Me. And I hope that soon, also you.</p>
+  <p>This is a pet project started by Álvaro Ortiz (<a href="http://www.twitter.com/@furilo">@furilo</a>). Jorge Sancha (<a href="http://www.twitter.com/@jorgesancha">@jorgesancha</a>) and Fernando Blat (<a href="http://www.twitter.com/@ferblape">@ferblape</a>) were asked if this was a goog enough idea to contribute, and they decided it was.</p>
 
   <h3>Can I export my data?</h3>
   <p>You will (I haven't got time to do it yet, but my plan is to expose that info so you other applications can consume it, as well as you being able to export a CSV). Want to help?</p>
@@ -38,7 +38,7 @@
   <h3>Do you impose some kind of editorial content about what projects can be tracked? (ie. What happens if someone is tracking donations for a venture you consider horrible?)</h3>
   <p>I don't know yet. If some project wants to raise money to fight against same-marriage sex, or that defends violent animal killings such as bullfighting I would not know what I'd do.</p>
 
-
-
+  <h3>Feedback, questions, proposals?</h3>
+  <p>Write to lets@trackdons.org</p>
 
 </section>
