--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -2,7 +2,11 @@
   <%= gravatar_for(donation.user, size: 45) %>
 
   <h2>
-    <strong><%= donation_quantity_currency(donation) %></strong>
+    <% if donation.private? && (!logged_in? || donation.user != current_user) %>
+      <%= t('.a_donation') %>
+    <% else %>
+      <strong><%= donation_quantity_currency(donation) %></strong>
+    <% end %>
 
     <% unless in_projects_page? %>
       <%= t('.to') %>
