--- a/app/views/donations/_donation.html.erb
+++ b/app/views/donations/_donation.html.erb
@@ -22,7 +22,12 @@
       <%= link_to '#', donation_path(donation) %>
     <% end %>
 
-    <span class="date"><%= l donation.date, format: :wadus %></span>
+    <span class="date">
+      <%= l donation.date, format: :wadus %>
+      <% if donation.private? %>
+        <i class="fa fa-lock tipsit" title="<%= t('.private_donation_not_visible_explanation') %>"></i>
+      <% end %>
+    </span>
 
   </h2>
 
