Category field in project inline creation

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -14,6 +14,7 @@
           </div>
           <%= f.hidden_field :project_id, value: @project.id %>
         <% else %>
+          
           <%= f.fields_for(:project) do |project_form| %>
             <%= project_form.hidden_field :name %>
             <div class="hint"><%= project_form.label(:name, 'ie. Wikipedia, Redd Cross, UNR') %></div>
@@ -22,7 +23,10 @@
               <div class="hint"><%= project_form.label(:description, 'Project Description') %></div>
               <%= project_form.text_field :url %>
               <div class="hint"><%= project_form.label(:url, 'Project URL') %></div>
+              <%= project_form.select :category_id, options_from_collection_for_select(Category.all, "id", "name") %>
+              <div class="hint"><%= project_form.label(:url, 'Project Category') %></div>
             </div>
+
           <% end %>
         <% end %>
         
